Upgrade libpnet to 0.11.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ readme = "README.md"
 
 [dependencies]
 #ipnetwork = "0.7.0"
-#pnet = "0.10.0"
+pnet = "0.11.0"
 
-[dependencies.pnet]
-git = "https://github.com/faern/libpnet"
-branch = "mockpnet"
+#[dependencies.pnet]
+#git = "https://github.com/faern/libpnet"
+#branch = ""
 #path = "../libpnet"
 
 [dependencies.ipnetwork]
