Restructure testing and add benchmarks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ log = "0.3"
 default = []
 unit-tests = [] # Activate this to build for unit testing
 integration-tests = [] # Activate to build for integration testing
+benchmarks = []
 
 [dependencies.pnet]
 git = "https://github.com/faern/libpnet"
