--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ ipnetwork = "0.9.0"
 #pnet = "0.12.0"
 log = "0.3"
 
+[dev-dependencies]
+lazy_static = "^0.2"
+
 [features]
 default = []
 unit-tests = [] # Activate this to build for unit testing
