--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: rust
+cache: cargo
 rust:
   - stable
   - beta
@@ -10,4 +11,5 @@ matrix:
   allow_failures:
     - rust: nightly
 script:
-  - cargo test
+  - cargo build --verbose
+  - cargo test --verbose
